# lets-debug-helper

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: dependabot-automation.yaml  main.yml  release.yml
letsdebughelper/: helpers.py  letsdebug.py
letsdebughelper/tests/: test_helpers.py  test_letsdebug.py
scripts/: make_gh_release.sh
