[tool.poetry]
name = "lets-debug-helper"
version = "1.6.9"
description = "CLI wrapper around the Let's Debug API for diagnosing Let's Encrypt certificate issuance issues"
authors = ["jediknight112 <17991353+jediknight112@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jediknight112/lets-debug-helper"
repository = "https://github.com/jediknight112/lets-debug-helper"
documentation = "https://github.com/jediknight112/lets-debug-helper#readme"
keywords = ["letsencrypt", "letsdebug", "ssl", "tls", "acme", "cli", "diagnostics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
include = ["README.md"]
packages = [
    { include = "letsdebughelper" },
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[tool.coverage.run]
relative_files = true

[tool.poetry.scripts]
lets-debug = "letsdebughelper.letsdebug:main"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.33.0"
rich = "^13.7.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"

[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
parameterized = "^0.9.0"
flake8 = "^6.1.0"
coveralls = "^3.3.1"
pytest = "^9.0.3"
pytest-cov = "^4.1.0"
yapf = ">=0.40.2,<0.44.0"
toml = "^0.10.2"
types-requests = "^2.31.0.10"

[tool.mypy]
# TODO: This is to help with the introduction of Mypy to the repo
# We will want to decide at some point to re-enable this since it can hide errors
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
