[flake8]
exclude = .git
max-line-length = 120

[metadata]
name = lets-debug-helper
author = jediknight112
author_email = jediknight11206@gmail.com
description = This is a cli tool that interacts with the Let's Debug API
url = https://github.com/jediknight112/lets-debug-helper

[options]
packages =
    letsdebughelper/

[options.entry_points]
console_scripts =
    lets-debug = letsdebughelper.letsdebug:main
